// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default queue behavior 1`] = `
"{
  \\"resource\\": {
    \\"aws_sqs_queue\\": {
      \\"cdktfstack_wingapp_Queue_8A990187\\": {
        \\"name\\": \\"Queue-c809745e\\"
      }
    }
  }
}"
`;

exports[`default queue behavior 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "cdktf-stack": Object {
        "children": Object {
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.1",
            },
            "id": "backend",
            "path": "cdktf-stack/backend",
          },
          "wing-app": Object {
            "children": Object {
              "Queue": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.sqsQueue.SqsQueue",
                      "version": "12.0.1",
                    },
                    "id": "Default",
                    "path": "cdktf-stack/wing-app/Queue/Default",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A distributed message queue",
                  "title": "Queue",
                },
                "id": "Queue",
                "path": "cdktf-stack/wing-app/Queue",
              },
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "cdktf-stack/wing-app/WingLogger",
              },
              "aws": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.1",
                },
                "id": "aws",
                "path": "cdktf-stack/wing-app/aws",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "id": "wing-app",
            "path": "cdktf-stack/wing-app",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.1",
        },
        "id": "cdktf-stack",
        "path": "cdktf-stack",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.1",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`queue name valid 1`] = `
"{
  \\"resource\\": {
    \\"aws_sqs_queue\\": {
      \\"cdktfstack_wingapp_TheIncredibleQueue01_2BA17E87\\": {
        \\"name\\": \\"The-Incredible_Queue-01-c8c9ba75\\"
      }
    }
  }
}"
`;

exports[`queue name valid 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "cdktf-stack": Object {
        "children": Object {
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.1",
            },
            "id": "backend",
            "path": "cdktf-stack/backend",
          },
          "wing-app": Object {
            "children": Object {
              "The-Incredible_Queue-01": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.sqsQueue.SqsQueue",
                      "version": "12.0.1",
                    },
                    "id": "Default",
                    "path": "cdktf-stack/wing-app/The-Incredible_Queue-01/Default",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A distributed message queue",
                  "title": "Queue",
                },
                "id": "The-Incredible_Queue-01",
                "path": "cdktf-stack/wing-app/The-Incredible_Queue-01",
              },
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "cdktf-stack/wing-app/WingLogger",
              },
              "aws": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.1",
                },
                "id": "aws",
                "path": "cdktf-stack/wing-app/aws",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "id": "wing-app",
            "path": "cdktf-stack/wing-app",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.1",
        },
        "id": "cdktf-stack",
        "path": "cdktf-stack",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.1",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`queue with a consumer function 1`] = `"new (require(\\"[REDACTED]/wingsdk/src/target-tf-aws/function.inflight.ts\\")).FunctionClient(process.env[\\"FUNCTION_NAME_55e0a834\\"])"`;

exports[`queue with a consumer function 2`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"cdktfstack_wingapp_QueueOnMessage8621be90_IamRole_9F3C6A5A\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"cdktfstack_wingapp_QueueOnMessage8621be90_IamRolePolicy_A4BC2FDB\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"sqs:ReceiveMessage\\\\\\",\\\\\\"sqs:ChangeMessageVisibility\\\\\\",\\\\\\"sqs:GetQueueUrl\\\\\\",\\\\\\"sqs:DeleteMessage\\\\\\",\\\\\\"sqs:GetQueueAttributes\\\\\\"],\\\\\\"Resource\\\\\\":\\\\\\"\${aws_sqs_queue.cdktfstack_wingapp_Queue_8A990187.arn}\\\\\\",\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_QueueOnMessage8621be90_IamRole_9F3C6A5A.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"cdktfstack_wingapp_QueueOnMessage8621be90_IamRolePolicyAttachment_24F46EBC\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_QueueOnMessage8621be90_IamRole_9F3C6A5A.name}\\"
      }
    },
    \\"aws_lambda_event_source_mapping\\": {
      \\"cdktfstack_wingapp_Queue_EventSourceMapping_C8D98616\\": {
        \\"batch_size\\": 1,
        \\"event_source_arn\\": \\"\${aws_sqs_queue.cdktfstack_wingapp_Queue_8A990187.arn}\\",
        \\"function_name\\": \\"\${aws_lambda_function.cdktfstack_wingapp_QueueOnMessage8621be90_EB3D85D3.function_name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"cdktfstack_wingapp_QueueOnMessage8621be90_EB3D85D3\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Queue-OnMessage-8621be90-c8370299\\"
          }
        },
        \\"function_name\\": \\"Queue-OnMessage-8621be90-c8370299\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_QueueOnMessage8621be90_IamRole_9F3C6A5A.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_QueueOnMessage8621be90_Code_48B96114.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.cdktfstack_wingapp_QueueOnMessage8621be90_S3Object_C0D5F163.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"cdktfstack_wingapp_QueueOnMessage8621be90_Code_48B96114\\": {
        \\"bucket_prefix\\": \\"code-c8e91c25-\\"
      }
    },
    \\"aws_s3_object\\": {
      \\"cdktfstack_wingapp_QueueOnMessage8621be90_S3Object_C0D5F163\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_QueueOnMessage8621be90_Code_48B96114.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    },
    \\"aws_sqs_queue\\": {
      \\"cdktfstack_wingapp_Queue_8A990187\\": {
        \\"name\\": \\"Queue-c809745e\\",
        \\"visibility_timeout_seconds\\": 30
      }
    }
  }
}"
`;

exports[`queue with a consumer function 3`] = `
Object {
  "tree": Object {
    "children": Object {
      "cdktf-stack": Object {
        "children": Object {
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.1",
            },
            "id": "backend",
            "path": "cdktf-stack/backend",
          },
          "wing-app": Object {
            "children": Object {
              "Handler": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [
                    Object {
                      "direction": "inbound",
                      "implicit": false,
                      "relationship": "handle",
                      "resource": "cdktf-stack/wing-app/Queue-OnMessage-8621be90",
                    },
                  ],
                  "wing:resource:stateful": false,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "An inflight resource",
                  "hidden": true,
                  "title": "Inflight",
                },
                "id": "Handler",
                "path": "cdktf-stack/wing-app/Handler",
              },
              "Queue": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [
                    Object {
                      "direction": "outbound",
                      "implicit": false,
                      "relationship": "on_message",
                      "resource": "cdktf-stack/wing-app/Queue-OnMessage-8621be90",
                    },
                  ],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.sqsQueue.SqsQueue",
                      "version": "12.0.1",
                    },
                    "id": "Default",
                    "path": "cdktf-stack/wing-app/Queue/Default",
                  },
                  "EventSourceMapping": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.lambdaEventSourceMapping.LambdaEventSourceMapping",
                      "version": "12.0.1",
                    },
                    "id": "EventSourceMapping",
                    "path": "cdktf-stack/wing-app/Queue/EventSourceMapping",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A distributed message queue",
                  "title": "Queue",
                },
                "id": "Queue",
                "path": "cdktf-stack/wing-app/Queue",
              },
              "Queue-OnMessage-8621be90": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [
                    Object {
                      "direction": "outbound",
                      "implicit": false,
                      "relationship": "handle",
                      "resource": "cdktf-stack/wing-app/Handler",
                    },
                    Object {
                      "direction": "outbound",
                      "implicit": true,
                      "relationship": "print",
                      "resource": "cdktf-stack/wing-app/WingLogger",
                    },
                    Object {
                      "direction": "inbound",
                      "implicit": false,
                      "relationship": "on_message",
                      "resource": "cdktf-stack/wing-app/Queue",
                    },
                  ],
                  "wing:resource:stateful": false,
                },
                "children": Object {
                  "Asset": Object {
                    "constructInfo": Object {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.15.1",
                    },
                    "id": "Asset",
                    "path": "cdktf-stack/wing-app/Queue-OnMessage-8621be90/Asset",
                  },
                  "Code": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                      "version": "12.0.1",
                    },
                    "id": "Code",
                    "path": "cdktf-stack/wing-app/Queue-OnMessage-8621be90/Code",
                  },
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.lambdaFunction.LambdaFunction",
                      "version": "12.0.1",
                    },
                    "id": "Default",
                    "path": "cdktf-stack/wing-app/Queue-OnMessage-8621be90/Default",
                  },
                  "IamRole": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                      "version": "12.0.1",
                    },
                    "id": "IamRole",
                    "path": "cdktf-stack/wing-app/Queue-OnMessage-8621be90/IamRole",
                  },
                  "IamRolePolicy": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                      "version": "12.0.1",
                    },
                    "id": "IamRolePolicy",
                    "path": "cdktf-stack/wing-app/Queue-OnMessage-8621be90/IamRolePolicy",
                  },
                  "IamRolePolicyAttachment": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRolePolicyAttachment.IamRolePolicyAttachment",
                      "version": "12.0.1",
                    },
                    "id": "IamRolePolicyAttachment",
                    "path": "cdktf-stack/wing-app/Queue-OnMessage-8621be90/IamRolePolicyAttachment",
                  },
                  "S3Object": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3Object.S3Object",
                      "version": "12.0.1",
                    },
                    "id": "S3Object",
                    "path": "cdktf-stack/wing-app/Queue-OnMessage-8621be90/S3Object",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Queue-OnMessage-8621be90",
                "path": "cdktf-stack/wing-app/Queue-OnMessage-8621be90",
              },
              "Queue-OnMessageHandler-8621be90": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": false,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "id": "Queue-OnMessageHandler-8621be90",
                "path": "cdktf-stack/wing-app/Queue-OnMessageHandler-8621be90",
              },
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [
                    Object {
                      "direction": "inbound",
                      "implicit": true,
                      "relationship": "print",
                      "resource": "cdktf-stack/wing-app/Queue-OnMessage-8621be90",
                    },
                  ],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "cdktf-stack/wing-app/WingLogger",
              },
              "aws": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.1",
                },
                "id": "aws",
                "path": "cdktf-stack/wing-app/aws",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "id": "wing-app",
            "path": "cdktf-stack/wing-app",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.1",
        },
        "id": "cdktf-stack",
        "path": "cdktf-stack",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.1",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`queue with custom timeout 1`] = `
"{
  \\"resource\\": {
    \\"aws_sqs_queue\\": {
      \\"cdktfstack_wingapp_Queue_8A990187\\": {
        \\"name\\": \\"Queue-c809745e\\",
        \\"visibility_timeout_seconds\\": 30
      }
    }
  }
}"
`;

exports[`queue with custom timeout 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "cdktf-stack": Object {
        "children": Object {
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.1",
            },
            "id": "backend",
            "path": "cdktf-stack/backend",
          },
          "wing-app": Object {
            "children": Object {
              "Queue": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.sqsQueue.SqsQueue",
                      "version": "12.0.1",
                    },
                    "id": "Default",
                    "path": "cdktf-stack/wing-app/Queue/Default",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A distributed message queue",
                  "title": "Queue",
                },
                "id": "Queue",
                "path": "cdktf-stack/wing-app/Queue",
              },
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "cdktf-stack/wing-app/WingLogger",
              },
              "aws": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.1",
                },
                "id": "aws",
                "path": "cdktf-stack/wing-app/aws",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "id": "wing-app",
            "path": "cdktf-stack/wing-app",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.1",
        },
        "id": "cdktf-stack",
        "path": "cdktf-stack",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.1",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`replace invalid character from queue name 1`] = `
"{
  \\"resource\\": {
    \\"aws_sqs_queue\\": {
      \\"cdktfstack_wingapp_TheIncredibleQueue_55EF5CE1\\": {
        \\"name\\": \\"The-Incredible-Queue-c800290c\\"
      }
    }
  }
}"
`;

exports[`replace invalid character from queue name 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "cdktf-stack": Object {
        "children": Object {
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.1",
            },
            "id": "backend",
            "path": "cdktf-stack/backend",
          },
          "wing-app": Object {
            "children": Object {
              "The*Incredible$Queue": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.sqsQueue.SqsQueue",
                      "version": "12.0.1",
                    },
                    "id": "Default",
                    "path": "cdktf-stack/wing-app/The*Incredible$Queue/Default",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A distributed message queue",
                  "title": "Queue",
                },
                "id": "The*Incredible$Queue",
                "path": "cdktf-stack/wing-app/The*Incredible$Queue",
              },
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "cdktf-stack/wing-app/WingLogger",
              },
              "aws": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.1",
                },
                "id": "aws",
                "path": "cdktf-stack/wing-app/aws",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "id": "wing-app",
            "path": "cdktf-stack/wing-app",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.1",
        },
        "id": "cdktf-stack",
        "path": "cdktf-stack",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.1",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
